[gd_scene load_steps=17 format=3 uid="uid://dhf3tee5e521d"]

[ext_resource type="Script" path="res://Scenes and Scripts/Outside/Bosses/OreBoss.gd" id="1_0rs84"]
[ext_resource type="Texture2D" uid="uid://dq87xkcknoasp" path="res://Assets/ore_boss.png" id="2_l6ljl"]
[ext_resource type="Texture2D" uid="uid://c1672h47df4i4" path="res://Assets/effect.png" id="3_ht002"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5stt4"]
size = Vector2(122, 67)

[sub_resource type="Animation" id="Animation_risr2"]
resource_name = "Attacking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attackparticle:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["res://Assets/SFX and Music/boss_attack.wav"],
"method": &"play_sound"
}]
}

[sub_resource type="Animation" id="Animation_jajyl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attackparticle:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_eveqc"]
resource_name = "walk"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kku3v"]
_data = {
"Attacking": SubResource("Animation_risr2"),
"RESET": SubResource("Animation_jajyl"),
"walk": SubResource("Animation_eveqc")
}

[sub_resource type="Gradient" id="Gradient_14s2s"]
offsets = PackedFloat32Array(0, 0.811475)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_34jw7"]
gradient = SubResource("Gradient_14s2s")

[sub_resource type="Curve" id="Curve_ehycw"]
_data = [Vector2(0, 0.010989), 0.0, 6.18132, 0, 0, Vector2(1, 1), 0.309066, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ojs2m"]
curve = SubResource("Curve_ehycw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2jddl"]
emission_shape_scale = Vector3(5, 5, 5)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
gravity = Vector3(0, 0, 0)
radial_accel_max = 200.0
scale_min = 0.1
scale_curve = SubResource("CurveTexture_ojs2m")
color = Color(0.478431, 0.407843, 0.14902, 1)
color_ramp = SubResource("GradientTexture1D_34jw7")

[sub_resource type="CircleShape2D" id="CircleShape2D_1t46m"]
radius = 150.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ho755"]
radius = 230.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r0prg"]
radius = 72.0
height = 202.0

[node name="OreBoss" type="CharacterBody2D" groups=["boss"]]
z_index = 5
script = ExtResource("1_0rs84")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("2_l6ljl")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 31.5)
shape = SubResource("RectangleShape2D_5stt4")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kku3v")
}

[node name="Attackparticle" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
amount_ratio = 0.451
process_material = SubResource("ParticleProcessMaterial_2jddl")
texture = ExtResource("3_ht002")
one_shot = true

[node name="AttackArea" type="Area2D" parent="."]

[node name="AttackShape" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_1t46m")
disabled = true

[node name="AttackTime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_ho755")

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(2, 12)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_r0prg")

[node name="HealthBar" type="ColorRect" parent="."]
offset_left = -47.0
offset_top = -52.0
offset_right = 53.0
offset_bottom = -42.0
color = Color(1, 0.392157, 0.392157, 1)

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="AttackTime" to="." method="_on_attack_time_timeout"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="area_entered" from="DamageArea" to="." method="_on_damage_area_area_entered"]
[connection signal="area_exited" from="DamageArea" to="." method="_on_damage_area_area_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
